test/integration/expected/test-ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:custom-tag
        ports:
        - containerPort: 80
---
apiVersion: v1 
kind: Service 
metadata: 
  name: nginx-service
spec: 
  selector: 
    app: nginx
  ports: 
  - protocol: TCP 
    port: 80 
    targetPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /testpath
        backend:
          serviceName: nginx-service
          servicePort: 80
      - path: /testpath2
        backend:
          serviceName: unrouted-service
          servicePort: 80
